--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "pinia": "3.0.4",
     "screenfull": "6.0.2",
     "vue": "3.5.25",
-    "vue-router": "4.6.3",
-    "vxe-table": "4.6.25"
+    "vue-router": "4.6.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "6.5.1",
