移除demo相关页面

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_BASE_URL = https://apifoxmock.com/m1/2930465-2145633-default/api/v1
-VITE_PUBLIC_PATH = /v3-admin-vite/
+VITE_BASE_URL = https://7050aewo1413.vicp.fun
+VITE_PUBLIC_PATH = /v3-admin/
